@@ -767,19 +767,6 @@ import { UAParser } from "ua-parser-js";
         ".",
       ]);
     }
-    if (os.indexOf("Android") !== -1 && browser.indexOf("Firefox") !== -1) {
-      return tag("p", [
-        tag("strong", ["❌ Incompatible browser:"]),
-        " Firefox on Android does not support pressure-sensitive pens. " +
-          "Consider using a different browser or ",
-        tag(
-          "a",
-          { href: "https://drawpile.net/download/" },
-          "the native Android app",
-        ),
-        ".",
-      ]);
-    }
     if (os.indexOf("Windows") !== -1 && browser.indexOf("Firefox") !== -1) {
       return tag("p", [
         tag("strong", ["❌ Incompatible browser:"]),
